<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jawon.han.widget.HanTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm" />

    <com.jawon.han.widget.HanButton
        android:id="@+id/btnReleaseAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarmOff" />

    <com.jawon.han.widget.HanButton
        android:id="@+id/btnStopService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopService" />

</LinearLayout>