<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.jawon.han.widget.HanTextView
                android:id="@+id/sensitivitySpinnerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensitivity" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.jawon.han.widget.HanSpinner
                android:id="@+id/sensitivitySpinner"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:labelFor="@id/sensitivitySpinnerLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.jawon.han.widget.HanTextView
                android:id="@+id/timeSpinnerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmTime" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.jawon.han.widget.HanSpinner
                android:id="@+id/timeSpinner"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:labelFor="@id/timeSpinnerLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.jawon.han.widget.HanTextView
                android:id="@+id/volumeSpinnerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.jawon.han.widget.HanSpinner
                android:id="@+id/volumeSpinner"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:labelFor="@id/volumeSpinnerLabel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.jawon.han.widget.HanButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />

            <com.jawon.han.widget.HanButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>